Refactor pruning structure to use WorldTree instead of SuggestionStruct
- Updated pruning functions to replace SuggestionStruct with WorldTree for improved parameter handling.
- Removed deprecated suggestion-related code and adjusted associated methods for consistency.
- Updated prune_on_overload as a failsafe mechanism to handle buffer overflow.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,7 +138,7 @@ include = [
     "pyloki/dynamic/*.py",
     "pyloki/detection/thresholding.py",
     "pyloki/utils/snail.py",
-    "pyloki/utils/suggestion.py",
+    "pyloki/utils/world_tree.py",
 ]
 
 [tool.ty.overrides.rules]
